tests-ast-compare/fixtures/babel/packages/babel-parser/test/fixtures/esprima/invalid-syntax/migrated_0225/input.js
function hello() { "use strict"; var interface; }
